GNOME Bugzilla – Bug 749890
dleyna: Fix incorrect properties passed to applications
Last modified: 2015-06-10 09:39:52 UTC
.
Created attachment 303991 [details] [review] dleyna: Fix incorrect properties passed to applications From coverity: grilo-plugins-0.2.14/src/dleyna/grl-dleyna-source.c:420: fallthrough: The above case falls through to this one.
Attachment 303991 [details] pushed as d72678e - dleyna: Fix incorrect properties passed to applications