dleyna: Fix incorrect properties passed to applications

From coverity:
grilo-plugins-0.2.14/src/dleyna/grl-dleyna-source.c:420: fallthrough: The above case falls through to this one.

https://bugzilla.gnome.org/show_bug.cgi?id=749890